null: upstream